--- a/css/layouts.css
+++ b/css/layouts.css
@@ -6,11 +6,11 @@ body {
 header {
   text-align: center;
 }
+
 img {
   object-fit: cover;
   width: 200px;
   height:200px;
-  
 }
 
 section {
@@ -19,7 +19,7 @@ section {
   height: 250px;
 }
 
-footer {
+/* footer {
   position: fixed;
   bottom: 0;
-}
+} */
